trunk/src/org/lwes/db/ESFParser.java
/* Generated By:JavaCC: Do not edit this line. ESFParser.java */
package org.lwes.db;

public class ESFParser implements ESFParserConstants {
    private String currentEvent;
    private EventTemplateDB eventTemplateDB;

    public void setEventTemplateDB(EventTemplateDB DB) {
        eventTemplateDB = DB;
    }

    public EventTemplateDB getEventTemplateDB() {
        return eventTemplateDB;
    }

    public void setCurrentEvent(String evt) {
        currentEvent = evt;
    }

    public String getCurrentEvent() {
        return currentEvent;
    }

    /**
     * A list of events
     */
    final public void eventlist() throws ParseException {
        event();
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case ID:
                    ;
                    break;
                default:
                    jj_la1[0] = jj_gen;
                    break label_1;
            }
            event();
        }
        jj_consume_token(0);
    }

    /**
     * a single event
     */
    final public void event() throws ParseException {
        eventName();
        jj_consume_token(11);
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case ID:
                attributeList();
                break;
            default:
                jj_la1[1] = jj_gen;
                ;
        }
        jj_consume_token(12);
    }

    /**
     * The name of an event, should be max 256 chars ([a-zA-Z0-9_]*)
     */
    final public void eventName() throws ParseException {
        Token t;
        t = jj_consume_token(ID);
        if (getEventTemplateDB().addEvent(t.image)) {
            setCurrentEvent(t.image);
        }
        else {
            throw new ParseException("Problem adding event " + t.image);
        }
    }

    final public void attributeList() throws ParseException {
        attribute();
        label_2:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case ID:
                    break;
                default:
                    jj_la1[2] = jj_gen;
                    break label_2;
            }
            attribute();
        }
    }

    final public void attribute() throws ParseException {
        String aType;
        String anAttribute;
        aType = type();
        anAttribute = attributeName();
        jj_consume_token(13);
        if (!(aType.equals("uint16")
              || aType.equals("int16")
              || aType.equals("uint32")
              || aType.equals("int32")
              || aType.equals("string")
              || aType.equals("ip_addr")
              || aType.equals("int64")
              || aType.equals("uint64")
              || aType.equals("boolean"))) {
            throw new ParseException("No such type '" + aType + "'");
        }
        String evt = getCurrentEvent();
        if (evt == null) {
            throw new ParseException("Bad Event");
        }
        if (!getEventTemplateDB().addEventAttribute(evt, anAttribute, aType)) {
            throw new ParseException("Problem adding attribute " + evt + "("
                                     + aType + "," + anAttribute + ")");
        }
    }

    final public String type() throws ParseException {
        Token t;
        t = jj_consume_token(ID);
        return t.image;
    }

    final public String attributeName() throws ParseException {
        Token t;
        t = jj_consume_token(ID);
        return t.image;
    }

    public ESFParserTokenManager token_source;
    SimpleCharStream jj_input_stream;
    public Token token, jj_nt;
    private int jj_ntk;
    private int jj_gen;
    final private int[] jj_la1 = new int[3];
    static private int[] jj_la1_0;

    static {
        jj_la1_0();
    }

    private static void jj_la1_0() {
        jj_la1_0 = new int[]{0x400, 0x400, 0x400,};
    }

    public ESFParser(java.io.InputStream stream) {
        this(stream, null);
    }

    public ESFParser(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1);
        }
        catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new ESFParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 3; i++) {
            jj_la1[i] = -1;
        }
    }

    public void reInit(java.io.InputStream stream) {
        reInit(stream, null);
    }

    public void reInit(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream.reInit(stream, encoding, 1, 1);
        }
        catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source.reInit(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 3; i++) {
            jj_la1[i] = -1;
        }
    }

    public ESFParser(java.io.Reader stream) {
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new ESFParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 3; i++) {
            jj_la1[i] = -1;
        }
    }

    public void reInit(java.io.Reader stream) {
        jj_input_stream.reInit(stream, 1, 1);
        token_source.reInit(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 3; i++) {
            jj_la1[i] = -1;
        }
    }

    public ESFParser(ESFParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 3; i++) {
            jj_la1[i] = -1;
        }
    }

    public void reInit(ESFParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 3; i++) {
            jj_la1[i] = -1;
        }
    }

    private Token jj_consume_token(int kind) throws ParseException {
        Token oldToken;
        if ((oldToken = token).next != null) {
            token = token.next;
        }
        else {
            token = token.next = token_source.getNextToken();
        }
        jj_ntk = -1;
        if (token.kind == kind) {
            jj_gen++;
            return token;
        }
        token = oldToken;
        jj_kind = kind;
        throw generateParseException();
    }

    final public Token getNextToken() {
        if (token.next != null) {
            token = token.next;
        }
        else {
            token = token.next = token_source.getNextToken();
        }
        jj_ntk = -1;
        jj_gen++;
        return token;
    }

    final public Token getToken(int index) {
        Token t = token;
        for (int i = 0; i < index; i++) {
            if (t.next != null) {
                t = t.next;
            }
            else {
                t = t.next = token_source.getNextToken();
            }
        }
        return t;
    }

    private int jj_ntk() {
        if ((jj_nt = token.next) == null) {
            return (jj_ntk = (token.next = token_source.getNextToken()).kind);
        }
        else {
            return (jj_ntk = jj_nt.kind);
        }
    }

    private java.util.Vector<int[]> jj_expentries = new java.util.Vector<int[]>();
    private int[] jj_expentry;
    private int jj_kind = -1;

    public ParseException generateParseException() {
        jj_expentries.removeAllElements();
        boolean[] la1tokens = new boolean[14];
        for (int i = 0; i < 14; i++) {
            la1tokens[i] = false;
        }
        if (jj_kind >= 0) {
            la1tokens[jj_kind] = true;
            jj_kind = -1;
        }
        for (int i = 0; i < 3; i++) {
            if (jj_la1[i] == jj_gen) {
                for (int j = 0; j < 32; j++) {
                    if ((jj_la1_0[i] & (1 << j)) != 0) {
                        la1tokens[j] = true;
                    }
                }
            }
        }
        for (int i = 0; i < 14; i++) {
            if (la1tokens[i]) {
                jj_expentry = new int[1];
                jj_expentry[0] = i;
                jj_expentries.addElement(jj_expentry);
            }
        }
        int[][] exptokseq = new int[jj_expentries.size()][];
        for (int i = 0; i < jj_expentries.size(); i++) {
            exptokseq[i] = jj_expentries.elementAt(i);
        }
        return new ParseException(token, exptokseq, tokenImage);
    }

    final public void enable_tracing() {
    }

    final public void disable_tracing() {
    }

}
